--- a/算法.md
+++ b/算法.md
@@ -154,3 +154,42 @@
 
 ## 三. 二分查找
 
+> 二分查找标准模板
+
+> 1.查找有序数组中某个数第一次出现的索引
+
+> ```
+> public static int leftBound(int[] arr, int target) {
+>     int left = 0;
+>     int right = arr.length; // 左闭右开区间 [left, right)
+>     while (left < right) {
+>         int mid = left + (right - left) / 2;
+>         if (arr[mid] < target) {
+>             left = mid + 1; // 目标在右半区
+>         } else {
+>             right = mid;   // 目标在左半区（包含等于的情况）
+>         }
+>     }
+>     // 检查是否找到
+>     return (left < arr.length && arr[left] == target) ? left : -1;
+> }
+> ```
+
+> 2.查找有序数组中某个数最后一次出现的索引
+
+> ```
+> public static int rightBound(int[] arr, int target) {
+>     int left = 0;
+>     int right = arr.length; // 左闭右开区间 [left, right)
+>     while (left < right) {
+>         int mid = left + (right - left) / 2;
+>         if (arr[mid] <= target) {
+>             left = mid + 1; // 目标在右半区（包含等于的情况）
+>         } else {
+>             right = mid;     // 目标在左半区
+>         }
+>     }
+>     // 找到右边界后需要减1
+>     return (left > 0 && arr[left - 1] == target) ? left - 1 : -1;
+> }
+> ```
