--- a/算法.md
+++ b/算法.md
@@ -154,42 +154,128 @@
 
 ## 三. 二分查找
 
-> 二分查找标准模板
-
-> 1.查找有序数组中某个数第一次出现的索引
+##### 1.二分查找标准模板
 
 > ```
-> public static int leftBound(int[] arr, int target) {
->     int left = 0;
->     int right = arr.length; // 左闭右开区间 [left, right)
->     while (left < right) {
->         int mid = left + (right - left) / 2;
->         if (arr[mid] < target) {
->             left = mid + 1; // 目标在右半区
->         } else {
->             right = mid;   // 目标在左半区（包含等于的情况）
->         }
+> //最基本模板：左闭右闭查找一个数并返回索引，不存在返回-1
+> 	public static int t1(int nums[],int target) {
+> 		//左闭右闭的意思就是索引能取到数组的第一个索引和最后一个索引，索引[0,nums.length-1]
+> 		//左闭右开的意思是左边能取到第一个索引，右边取不到，索引[0,nums.length)
+> 		//左开右闭，左开右开等同理，其实这些的思路都差不多，就是判断条件有差别
+> 		//怕记太多会乱掉，下面都使用左闭右闭来编写
+> 		int left = 0;
+> 		int right = nums.length-1;
+> 		//左闭右闭的终止条件是left<=right，即left+1=right时结束遍历
+> 		while(left<=right) {
+> 			//取到中间数的时候最好像我这样写，能防止数据溢出同时使用位运算代替除法提高性能
+> 			//相当于是int mid = (left+right)/2;
+> 			//注意这里位运算外面一定一定一定要加个括号保证先算，不然后面会陷入死循环
+> 			int mid = left+((right-left)>>1);
+> 		    if(nums[mid]==target) {//当中间数等于目标值时，直接返回其索引
+> 		    	return mid;
+> 		    }else if(nums[mid]<target){//当中间值小于目标值，说明目标值在右侧，左索引向右移
+> 		    	left = mid+1;
+> 		    }else {//当中间值大于目标值，说明目标值在左侧，右索引向左移
+> 		    	right = mid-1;
+> 		    }
+> 		}
+> 		return -1;
+> 	}
+> ```
+>
+> 
+
+> 1.左边界
+
+> ```
+> int left = lower_bound, right = upper_bound;
+> while (left <= right) {
+>     int mid = left + (right - left) / 2;
+>     if (满足条件(mid)) {
+>         // 可能还有更小的满足条件的解
+>         right = mid - 1;
+>     } else {
+>         left = mid + 1;
 >     }
->     // 检查是否找到
->     return (left < arr.length && arr[left] == target) ? left : -1;
+> }
+> // left 指向第一个满足条件的解（或没有满足条件的情况）
+> 
+> ```
+
+> 2.右边界
+
+> ```
+> int left = lower_bound, right = upper_bound;
+> while (left <= right) {
+>     int mid = left + (right - left) / 2;
+>     if (满足条件(mid)) {
+>         // 可能还有更大的满足条件的解
+>         left = mid + 1;
+>     } else {
+>         right = mid - 1;
+>     }
+> }
+> // right 指向最后一个满足条件的解
+> 
+> ```
+
+##### 2. 二分查找区分
+
+![](D:\代码文件\蓝桥杯入门算法Code\lanqiaoAlgorithm\pictures\二分区别.png)
+
+> 
+>
+> 滑动窗口模板代码
+
+> ```
+> public class SlidingWindowDemo {
+>     public static void main(String[] args) {
+>         // 示例数组
+>         int[] arr = {1, 3, -1, -3, 5, 3, 6, 7};
+>         int k = 3;  // 窗口大小
+> 
+>         // 计算初始窗口的和
+>         int currentSum = 0;
+>         for (int i = 0; i < k; i++) {
+>             currentSum += arr[i];
+>         }
+>         int maxSum = currentSum;
+> 
+>         // 滑动窗口，从第 k 个元素开始，每次加入一个新元素、减去最左边的旧元素
+>         for (int i = k; i < arr.length; i++) {
+>             currentSum = currentSum + arr[i] - arr[i - k];
+>             maxSum = Math.max(maxSum, currentSum);
+>         }
+>         
+>         System.out.println("窗口大小为 " + k + " 的最大和为: " + maxSum);
+>     }
 > }
 > ```
 
-> 2.查找有序数组中某个数最后一次出现的索引
+>2. 前缀和算法示例
+
+前缀和算法通常用于快速求区间和。下面的示例中，先计算数组的前缀和数组，然后利用前缀和数组在 O(1) 时间内求任意区间和。
 
 > ```
-> public static int rightBound(int[] arr, int target) {
->     int left = 0;
->     int right = arr.length; // 左闭右开区间 [left, right)
->     while (left < right) {
->         int mid = left + (right - left) / 2;
->         if (arr[mid] <= target) {
->             left = mid + 1; // 目标在右半区（包含等于的情况）
->         } else {
->             right = mid;     // 目标在左半区
+> public class PrefixSumDemo {
+>     public static void main(String[] args) {
+>         // 示例数组
+>         int[] arr = {2, 4, 5, 7, 9, 3, 8};
+>         int n = arr.length;
+>         
+>         // 构造前缀和数组，prefixSum[0] = 0
+>         int[] prefixSum = new int[n + 1];
+>         prefixSum[0] = 0;
+>         for (int i = 1; i <= n; i++) {
+>             prefixSum[i] = prefixSum[i - 1] + arr[i - 1];
 >         }
+>         
+>         // 举例求解区间 [l, r] 的和，假设数组下标从 0 开始
+>         int l = 2, r = 5; // 计算 arr[2] 到 arr[5] 的和
+>         int sum = prefixSum[r + 1] - prefixSum[l];
+>         
+>         System.out.println("区间 [" + l + ", " + r + "] 的和为: " + sum);
 >     }
->     // 找到右边界后需要减1
->     return (left > 0 && arr[left - 1] == target) ? left - 1 : -1;
 > }
+> 
 > ```
