调整二分模板

--- a/算法.md
+++ b/算法.md
@@ -185,7 +185,7 @@
 >
 > 
 
-> 1.左边界
+> 1.左边界  最大值最小满足题目
 
 > ```
 > int left = lower_bound, right = upper_bound;
@@ -202,7 +202,7 @@
 > 
 > ```
 
-> 2.右边界
+> 2.右边界   最小值最大满足题目
 
 > ```
 > int left = lower_bound, right = upper_bound;
@@ -279,3 +279,23 @@
 > }
 > 
 > ```
+
+3.快速幂运算
+
+> ```
+> // 快速幂（快速计算 a^b % mod）
+>     static long modPow(long a, long b, int mod) {
+>         long result = 1;
+>         a %= mod;
+>         while (b > 0) {
+>             if ((b & 1) == 1) {
+>                 result = result * a % mod;
+>             }
+>             a = a * a % mod;
+>             b >>= 1;
+>         }
+>         return result;
+>     }
+> ```
+>
+> 
