--- a/算法.md
+++ b/算法.md
@@ -154,9 +154,9 @@
 
 ## 三. 二分查找
 
-##### 1.二分查找标准模板
+### 1.二分查找标准模板
 
-> ```
+> ```java
 > //最基本模板：左闭右闭查找一个数并返回索引，不存在返回-1
 > 	public static int t1(int nums[],int target) {
 > 		//左闭右闭的意思就是索引能取到数组的第一个索引和最后一个索引，索引[0,nums.length-1]
@@ -187,7 +187,7 @@
 
 > 1.左边界  最大值最小满足题目
 
-> ```
+> ```java
 > int left = lower_bound, right = upper_bound;
 > while (left <= right) {
 >     int mid = left + (right - left) / 2;
@@ -204,7 +204,7 @@
 
 > 2.右边界   最小值最大满足题目
 
-> ```
+> ```java
 > int left = lower_bound, right = upper_bound;
 > while (left <= right) {
 >     int mid = left + (right - left) / 2;
@@ -219,16 +219,18 @@
 > 
 > ```
 
-##### 2. 二分查找区分
+### 2. 二分查找区分
 
 ![](D:\代码文件\蓝桥杯入门算法Code\lanqiaoAlgorithm\pictures\二分区别.png)
 
-> 
->
-> 滑动窗口模板代码
+------
 
-> ```
-> public class SlidingWindowDemo {
+
+
+#### 1.滑动窗口模板代码
+
+> ```java
+> public class Main {
 >     public static void main(String[] args) {
 >         // 示例数组
 >         int[] arr = {1, 3, -1, -3, 5, 3, 6, 7};
@@ -252,37 +254,330 @@
 > }
 > ```
 
->2. 前缀和算法示例
+#### 2.一维前缀和
 
-前缀和算法通常用于快速求区间和。下面的示例中，先计算数组的前缀和数组，然后利用前缀和数组在 O(1) 时间内求任意区间和。
+**Java 代码**
 
-> ```
-> public class PrefixSumDemo {
->     public static void main(String[] args) {
->         // 示例数组
->         int[] arr = {2, 4, 5, 7, 9, 3, 8};
->         int n = arr.length;
+> ```java
+> import java.io.*;
+> import java.util.*;
+> 
+> public class Main {
+>     public static void main(String[] args) throws IOException {
+>         int[] arr = new int[(int) 1e5 + 10];
+>         long[] S = new long[(int) 1e5 + 10];
+>         BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+>         PrintWriter out = new PrintWriter(System.out);
 >         
->         // 构造前缀和数组，prefixSum[0] = 0
->         int[] prefixSum = new int[n + 1];
->         prefixSum[0] = 0;
+>         StringTokenizer st = new StringTokenizer(br.readLine());
+>         int n = Integer.parseInt(st.nextToken());
+>         int q = Integer.parseInt(st.nextToken());
+>         st = new StringTokenizer(br.readLine());
 >         for (int i = 1; i <= n; i++) {
->             prefixSum[i] = prefixSum[i - 1] + arr[i - 1];
+>             arr[i] = Integer.parseInt(st.nextToken());
+>             S[i] = arr[i] + S[i - 1];
 >         }
->         
->         // 举例求解区间 [l, r] 的和，假设数组下标从 0 开始
->         int l = 2, r = 5; // 计算 arr[2] 到 arr[5] 的和
->         int sum = prefixSum[r + 1] - prefixSum[l];
->         
->         System.out.println("区间 [" + l + ", " + r + "] 的和为: " + sum);
+>         for (int i = 1; i <= q; i++) {
+>             st = new StringTokenizer(br.readLine());
+>             int start = Integer.parseInt(st.nextToken());
+>             int end = Integer.parseInt(st.nextToken());
+>             long sum = S[end] - S[start - 1];
+>             out.println(sum);
+>         }
+>         out.flush();
 >     }
 > }
 > 
 > ```
 
-3.快速幂运算
+**C++代码**
 
+> ```c++
+> #include<bits/stdc++.h>
+> using namespace std;
+> 
+> int arr[(int)1e5+10];
+> long long  Sn[(int)1e5+10];
+> 
+> int main(){
+>     int n,q,l,r;
+>     long long sum;
+>     scanf("%d %d",&n,&q);
+>     for (int i = 1; i <= n; i++)
+>     {
+>         scanf("%d",&arr[i]);
+>          Sn[i]=arr[i]+Sn[i-1]; 
+>     }
+>     
+>     for (int i = 1; i <= q; i++)
+>     {
+>         scanf("%d %d",&l,&r);
+>         printf("%lld\n",Sn[r]-Sn[l-1]);
+>     }       
+> return 0;
+> 
+> }
 > ```
+
+> [蓝桥OJ：一维前缀和](https://www.lanqiao.cn/problems/18437/learning/)
+
+#### 3.一维差分
+
+**Java 代码**
+
+> ```java
+> import java.io.*;
+> import java.util.*;
+> public class Main {
+>     static int[] arr=new int[(int)2e5+10];
+>     static int[] Sn=new int[(int)2e5+10];
+>     public static void main(String[] args) throws IOException {
+>         BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+>         PrintWriter out = new PrintWriter(System.out);
+>         StringTokenizer st = new StringTokenizer(br.readLine());
+>         int n=Integer.parseInt(st.nextToken());
+>         int m=Integer.parseInt(st.nextToken());
+>       st=  new StringTokenizer(br.readLine());
+>         for (int i = 1; i <= n; i++) {
+>             arr[i]=Integer.parseInt(st.nextToken());
+>             Sn[i]=arr[i]-arr[i-1];
+>         }
+>         for (int i = 1; i <= m; i++) {
+>             st= new StringTokenizer(br.readLine());
+>             int l=Integer.parseInt(st.nextToken());
+>             int r=Integer.parseInt(st.nextToken());
+>             int d=Integer.parseInt(st.nextToken());
+>             Sn[l]+=d;
+>             Sn[r+1]-=d;
+>         }
+>         for (int i = 1; i <= n; i++) {
+>             out.print(Sn[i]+=Sn[i-1]);
+>             if(i!=n){
+>                 out.print(" ");
+>             }
+>         }
+>         out.flush();
+>     }
+> }
+> 
+> ```
+
+**C++代码**
+
+> ```c++
+> #include<bits/stdc++.h>
+> using namespace std;
+> const int N=2e5+10;
+>     int arr[N];
+>     long long diff[N];
+> 
+> int main(){
+>     int n,m;
+>     scanf("%d %d",&n,&m);
+>     for(int i=1;i<=n;i++){
+>         scanf("%d",&arr[i]);
+>         diff[i]=arr[i]-arr[i-1];
+>     }
+>     for(int i=1;i<=m;i++){
+>         int l,r,d;
+>         scanf("%d %d %d",&l,&r,&d);
+>         diff[l]+=d;
+>         diff[r+1]-=d;
+>     }
+>     for(int i=1;i<=n;i++){     
+>         printf("%lld ",diff[i]+=diff[i-1]);
+>     }
+>     return 0;
+> 
+> }
+> ```
+
+>[[蓝桥OJ：一维差分](https://www.lanqiao.cn/problems/18438/learning/)
+
+#### 4.二维前缀和
+
+**Java代码**
+
+> ```java
+> import java.io.*;
+> import java.util.*;
+> 
+> public class Main {
+>     static final int N = (int) (1e3 + 10);
+>     static final int M = (int) (1e3 + 10);
+>     static int[][] arr = new int[N][M];
+>     static  int[][]prefixSum=new int[N][M];
+>     public static void main(String[] args) throws IOException {
+>         BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+>         PrintWriter out = new PrintWriter(System.out);
+>         StringTokenizer st = new StringTokenizer(br.readLine());
+>         int n = Integer.parseInt(st.nextToken());
+>         int m = Integer.parseInt(st.nextToken());
+>         int q = Integer.parseInt(st.nextToken());
+>         for (int i = 1; i <= n; i++) {
+>             st = new StringTokenizer(br.readLine());
+>             for (int j = 1; j <= m; j++) {
+>                 arr[i][j] = Integer.parseInt(st.nextToken());
+>                 prefixSum[i][j]=arr[i][j]+prefixSum[i][j-1]+prefixSum[i-1][j]-prefixSum[i-1][j-1];
+>             }
+>         }
+>         for (int i = 1; i <= q; i++) {  
+>             st = new StringTokenizer(br.readLine());
+>             int x1 = Integer.parseInt(st.nextToken());
+>             int y1 = Integer.parseInt(st.nextToken());
+>             int x2 = Integer.parseInt(st.nextToken());
+>             int y2 = Integer.parseInt(st.nextToken());
+>             long sum=prefixSum[x2][y2]-prefixSum[x2][y1-1]-prefixSum[x1-1][y2]+prefixSum[x1-1][y1-1];
+>             out.println(sum);
+>         }
+> 
+>         out.flush();
+> 
+>     }
+> }
+> 
+> ```
+
+**C++代码**
+
+> ```C++
+> #include<bits/stdc++.h>
+> using namespace std;
+> 
+>   const int N =(int)1e3+10;
+>   const int  M=(int)1e3+10;
+>  int arr[N][M],prefixSum[N][M];
+>  
+> int main(){
+>     int n,m,q;
+>     scanf("%d %d %d",&n,&m,&q);
+>     for (int i = 1; i <= n; i++)
+>     {
+>        for (int j =1; j <= m; j++)
+>        { 
+>         scanf("%d",&arr[i][j]);
+>         prefixSum[i][j]=arr[i][j]+prefixSum[i][j-1]+prefixSum[i-1][j]-prefixSum[i-1][j-1];
+>        }
+>     }
+>     int x1,x2,y1,y2;
+>     for (int i = 1; i <= q; i++)
+>     {   
+>         scanf("%d %d %d %d", &x1, &y1, &x2, &y2);
+>         long long sum=prefixSum[x2][y2]-prefixSum[x2][y1-1]-prefixSum[x1-1][y2]+prefixSum[x1-1][y1-1];   
+>         printf("%lld\n",sum);   
+>     }
+>     return 0;   
+> }
+> ```
+
+> [蓝桥OJ:二维前缀和](https://www.lanqiao.cn/problems/18439/learning)
+
+#### 5.二维差分
+
+**Java代码**
+
+> ```java
+> import java.io.*;
+> import java.util.*;
+> 
+> public class Main {
+> 
+>     static final int N = (int) (1e3 + 10);
+>     static final int M = (int) (1e3 + 10);
+>     static int[][] arr=new int[N][M];
+>     static int[][] diff=new int[N][M];
+>     public static void main(String[] args) throws IOException {
+> 
+>         BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+>         PrintWriter out = new PrintWriter(System.out);
+>         StringTokenizer st = new StringTokenizer(br.readLine());
+>         int n = Integer.parseInt(st.nextToken());
+>         int m = Integer.parseInt(st.nextToken());
+>         int q = Integer.parseInt(st.nextToken());
+>         for (int i = 1; i <= n; i++) {
+>             st=  new StringTokenizer(br.readLine());
+>             for (int j = 1; j <= m; j++) {
+>                 arr[i][j]=Integer.parseInt(st.nextToken());
+>                 diff[i][j]=arr[i][j]-arr[i][j-1]-arr[i-1][j]+arr[i-1][j-1];
+>             }
+>         }
+>         for (int i = 1; i <= q; i++) {
+>             st=  new StringTokenizer(br.readLine());
+>             int x1=Integer.parseInt(st.nextToken());
+>             int y1=Integer.parseInt(st.nextToken());
+>             int x2=Integer.parseInt(st.nextToken());
+>             int y2=Integer.parseInt(st.nextToken());
+>             int d=Integer.parseInt(st.nextToken());
+>             diff[x1][y1]+=d;
+>             diff[x2+1][y1]-=d;
+>             diff[x1][y2+1]-=d;
+>             diff[x2+1][y2+1]+=d;
+>         }
+> 
+>         for (int i = 1; i <= n; i++) {
+>             for (int j = 1; j <= m; j++) {
+>                 out.print(diff[i][j]+=diff[i][j-1]+diff[i-1][j]-diff[i-1][j-1]);
+>                 if(j!=m){
+>                     out.print(" ");
+>                 }
+>             }
+>             if(i!=n){
+>                 out.println();
+>             }
+>         }
+>         out.flush();
+>     }
+> }
+> 
+> ```
+
+**C++代码**
+
+> ```C++
+> #include <bits/stdc++.h>
+> using namespace std;
+> 
+> const int N=(int)1e3+10,M=(int)1e3+10;
+> int arr[N][M];
+> int diff[N][M];
+> 
+> int main(){
+>     int n,m,q;
+>     scanf("%d %d %d",&n,&m,&q);
+>     for (int i = 1; i <= n; i++)
+>     {
+>        for (int j = 1; j <= m; j++)
+>        {   
+>         scanf("%d",&arr[i][j]);
+>         diff[i][j]=arr[i][j]-arr[i][j-1]-arr[i-1][j]+arr[i-1][j-1];
+>        }    
+>     }
+>      int x1,x2,y1,y2,d;
+>     for (int i = 1; i <=q; i++)
+>     {
+>         scanf("%d %d %d %d %d",&x1,&y1,&x2,&y2,&d);
+>         diff[x1][y1]+=d;
+>         diff[x2+1][y1]-=d;
+>         diff[x1][y2+1]-=d;
+>         diff[x2+1][y2+1]+=d;
+>     }
+>        for (int i = 1; i <= n; i++)
+>     {     
+>        for (int j = 1; j <= m; j++)
+>        {
+>         printf("%d ",diff[i][j]+=diff[i][j-1]+diff[i-1][j]-diff[i-1][j-1]);
+>        }
+>        printf("\n"); 
+>     }
+>    return 0;
+> }
+> ```
+
+[蓝桥OJ:二维差分](https://www.lanqiao.cn/problems/18440/learning)
+
+#### 6.快速幂运算
+
+> ```java
 > // 快速幂（快速计算 a^b % mod）
 >     static long modPow(long a, long b, int mod) {
 >         long result = 1;
@@ -298,4 +593,3 @@
 >     }
 > ```
 >
-> 
