添加算法模板

--- a/算法.md
+++ b/算法.md
@@ -148,10 +148,6 @@
 
 ><img src="D:\代码文件\蓝桥杯入门算法Code\lanqiaoAlgorithm\pictures\二进制第n位为几.png" alt="代码截图"  />
 
->![](D:\代码文件\蓝桥杯入门算法Code\lanqiaoAlgorithm\pictures\二进制第n位为几.png)
->
->
-
 ## 三. 二分查找
 
 ### 1.二分查找标准模板
@@ -185,7 +181,7 @@
 >
 > 
 
-> 1.左边界  最大值最小满足题目
+> 1.左边界  最小满足题目
 
 > ```java
 > int left = lower_bound, right = upper_bound;
@@ -202,7 +198,7 @@
 > 
 > ```
 
-> 2.右边界   最小值最大满足题目
+> 2.右边界   最大满足题目
 
 > ```java
 > int left = lower_bound, right = upper_bound;
@@ -225,9 +221,9 @@
 
 ------
 
+## 四，滑动窗口
 
-
-#### 1.滑动窗口模板代码
+#### 1.滑动窗口模板代码1(因为窗口大小固定已知)
 
 > ```java
 > public class Main {
@@ -253,6 +249,31 @@
 >     }
 > }
 > ```
+
+#### 2.滑动窗口模板代码2(因为窗口大小固定已知)
+
+> ```java
+> public class Main {
+>     public static void main(String[] args) {
+>         // 示例数组
+>         int[] arr = {1, 3, -1, -3, 5, 3, 6, 7};
+>         int k = 3;  // 窗口大小
+> 		int currentsum=0;
+>         int maxsum=0;
+>         for(int i=0;i<arr.length;i++){
+>             currentsum+=arr[i];
+>             if(i+1<k)continue;
+>            maxsum= Math.max(maxsum,currentsum);
+>             
+>          currentsum-=arr[i-k+1];
+>         }
+>    
+>         System.out.println("窗口大小为 " + k + " 的最大和为: " + maxSum);
+>     }
+>    }
+>         ```
+
+## 五，前缀和 差分
 
 #### 2.一维前缀和
 
@@ -575,12 +596,14 @@
 
 [蓝桥OJ:二维差分](https://www.lanqiao.cn/problems/18440/learning)
 
+## 六，幂运算
+
 #### 6.快速幂运算
 
 > ```java
 > // 快速幂（快速计算 a^b % mod）
 >     static long modPow(long a, long b, int mod) {
->         long result = 1;
+>         long result = 1;	
 >         a %= mod;
 >         while (b > 0) {
 >             if ((b & 1) == 1) {
@@ -592,3 +615,35 @@
 >         return result;
 >     }
 > ```
+
+## 七，gcd 和lcd
+
+#### 7.最大公约数模板
+
+> ```java
+> int gcd(int a,int b){
+>     return b==0?a:gcd(b,a%b);
+> }
+> ```
+
+#### 8.最小公倍数模板
+
+> ```java
+> int lcd(int a ,int b){
+>     return a*b/gcd(a,b);
+> }
+> ```
+
+## 八，素数判断
+
+> ```java
+> boolean isPrime(int n) {
+>     if (n <= 1) return false;
+>     for (int i = 2; i <= Math.sqrt(n); i++) {
+>         if (n % i == 0) return false;
+>     }
+>     return true;
+> }
+> ```
+>
+> 
