--- a/算法.md
+++ b/算法.md
@@ -146,7 +146,7 @@
 >     }
 > ```
 
-><img src="D:\代码文件\蓝桥杯入门算法Code\lanqiaoAlgorithm\pictures\二进制第n位为几.png" alt="代码截图"  />
+![](D:\代码文件\蓝桥杯入门算法Code\lanqiaoAlgorithm\pictures\二进制第n位为几.png)
 
 ## 三. 二分查找
 
